JavaLibrary plugin